--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "main": "./src/plugin.js",
     "author": "Jérôme ODIER",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
     },
     "devDependencies": {
